# playxonotic

./: .gitignore  .gitmodules  LICENSE  README.md
.cursor/plans/: full_feature_implementation_fb1027a3.plan.md  streaming_lazy_load_optimization_57dc9023.plan.md
.github/workflows/: desktop-build.yml
antigravity-game/models/weapons/: machinegun.mtl  pistol.mtl  shotgun.mtl  smg.mtl  sniper.mtl
antigravity-game/qcsrc/: Makefile
antigravity-game/qcsrc/client/: defs.qh  hud.qc  main.qc  progs.src
antigravity-game/qcsrc/common/: constants.qh  physics.qh
antigravity-game/qcsrc/menu/: menu.qc
antigravity-game/qcsrc/server/: defs.qh  forward_decls.qh  main.qc  player.qc  progs.src  weapons_fire.qc
antigravity-game/scripts/: default.cfg  mapinfo_template.mapinfo
docs/: NETRADIANT_BEGINNER_GUIDE.md  NETRADIANT_CUSTOM_SETUP.md
playxonotic/backend/: .env.example  package-lock.json  package.json
playxonotic/deploy/: deploy.sh  nginx.conf  setup-vps.sh
playxonotic/desktop/: forge.config.js  login.html  main.js  package-lock.json  package.json  preload.js
playxonotic/launcher/: .gitignore  Cargo.toml  README.md  build-deb.sh
playxonotic/launcher/debian/: control
playxonotic/launcher/src/: app.rs  auth.rs  game.rs  main.rs  ui.rs
playxonotic/launcher/testpkg/DEBIAN/: control
playxonotic/proxy/: .env.example  index.js  package-lock.json  package.json
tools/: convert_shotgun.py  convert_shotgun_new.py  convert_weapons.py  fix_shader.sh  optimize_mesh.py
xonotic-web-port/: build-wasm.sh  final_link_command.txt  link_command.txt
(+34 files in other folders)
