[package]
name = "playxonotic-launcher"
version = "1.0.0"
edition = "2021"
authors = ["Barramee Kottanawadee"]
description = "Native PlayXonotic launcher with login"

[dependencies]
gtk4 = { version = "0.7", package = "gtk4" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
zip = "2.2"
